--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Daniel Brackenbury",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/helpvisa/express-note-taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/helpvisa/express-note-taker/issues"
+  },
+  "homepage": "https://github.com/helpvisa/express-note-taker#readme"
 }
